RESOLVED FIXED139869
[iOS] Log using FeatureCounter when a PacheCache entry is not reused because it expired
https://bugs.webkit.org/show_bug.cgi?id=139869
Summary [iOS] Log using FeatureCounter when a PacheCache entry is not reused because ...
Chris Dumez
Reported 2014-12-22 11:08:35 PST
Log using FeatureCounter when a PacheCache entry is not reused because it expired. Radar: <rdar://problem/19255690>
Attachments
Patch (7.03 KB, patch)
2014-12-22 11:13 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2014-12-22 11:13:08 PST
WebKit Commit Bot
Comment 2 2014-12-22 12:13:25 PST
Comment on attachment 243628 [details] Patch Clearing flags on attachment: 243628 Committed r177647: <http://trac.webkit.org/changeset/177647>
WebKit Commit Bot
Comment 3 2014-12-22 12:13:30 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.