[iOS] Log using FeatureCounter when a PacheCache entry is not reused because it expired https://bugs.webkit.org/show_bug.cgi?id=139869 <rdar://problem/19255690>

Reviewed by Darin Adler.

Log using FeatureCounter when a PacheCache entry is not reused because
it expired.

* history/PageCache.cpp:
(WebCore::PageCache::take):
(WebCore::PageCache::get):
* history/PageCache.h:
* loader/FrameLoader.cpp:
(WebCore::FrameLoader::commitProvisionalLoad):
(WebCore::FrameLoader::loadDifferentDocumentItem):
* loader/HistoryController.cpp:
(WebCore::HistoryController::invalidateCurrentItemCachedPage):
* platform/FeatureCounterKeys.h:


Canonical link: https://commits.webkit.org/157807@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177647 268f45cc-cd09-0410-ab3c-d52691b4dbfc